Closed Bug 756227 Opened 13 years ago Closed 13 years ago

TreeContext generates lots of warnings

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla15

People

(Reporter: dzbarsky, Assigned: dzbarsky)

Details

Attachments

(1 file, 1 obsolete file)

Attached patch Patch (obsolete) — Splinter Review
No description provided.
Assignee: general → dzbarsky
Status: NEW → ASSIGNED
Attachment #624849 - Attachment is patch: true
Attachment #624849 - Flags: review?(n.nethercote)
Summary: TreeContextFlags generates lots of warnings → TreeContext generates lots of warnings
Comment on attachment 624849 [details] [diff] [review] Patch Review of attachment 624849 [details] [diff] [review]: ----------------------------------------------------------------- Thanks for fixing :) Which compiler gave the warnings? GCC 4.6 on Linux doesn't complain about this.
Attachment #624849 - Flags: review?(n.nethercote) → review+
I believe both clang and MSVC do class-struct mismatch warnings.
This was with clang.
Attached patch Patch r=njnSplinter Review
Attachment #624849 - Attachment is obsolete: true
Keywords: checkin-needed
Target Milestone: --- → mozilla15
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: