Bug 756227: Fix TreeContext warnings. r=nnethercote.

--HG--
extra : rebase_source : c6ab31cfd64ebecb4a8bd4069d03fc2f41d3203b